--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/CuzImBisonratte/wifi-extractor#readme",
   "dependencies": {
-    "mysql": "^2.18.1"
+    "linebyline": "^1.3.0",
+    "mysql": "^2.18.1",
+    "xml2js": "^0.4.23"
   }
 }
